SAKAI-3150 Added Navigation between blog posts Added buttons below the posts to allow navigation between consecutive posts SAKAI-3150.1 Minor Text Fixes Alt Text fixed for Navigation buttons and internationalized Internationalized Text tweaked slightly SAKAI-3150.2 More Minor Fixes Changed the pictures for the buttons to theme correctly Removed wrapping function and added first and last features

--- a/tool/src/webapp/css/clog.css
+++ b/tool/src/webapp/css/clog.css
@@ -209,3 +209,6 @@ a.clog-draft-label:hover {
 	clear: left;
     margin-top: 10px;
 }
+#post_page-BlanksSpace {
+	display:inline;
+}
